force-app/main/default/objects/PBS_AAAP_PolyPath__c/PBS_AAAP_PolyPath__c.object-meta.xml
<CustomObject>
    <label>Poly Path</label>
    <nameField>
        <label>Poly Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poly Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>