force-app/main/default/objects/PBS_AAAP_PolyPath__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <precision>18</precision>
    <required>true</required>
    <scale>15</scale>
    <type>Number</type>
</CustomField>