force-app/main/default/objects/PBS_AAAP_PolyPath__c/fields/Path_Index__c.field-meta.xml
<CustomField>
    <fullName>Path_Index__c</fullName>
    <label>Path Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>