force-app/main/default/objects/PBS_AAAP_PolyPath__c/fields/PBS_AAAP_EXTERNAL_KEY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EXTERNAL_KEY__c</fullName>
    <description>External key as polyobjectname+lat+long</description>
    <externalId>true</externalId>
    <label>PBS_AAAP_EXTERNAL_KEY</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>