force-app/main/default/objects/PBS_AAAP_PolyPath__c/fields/Poly_Object__c.field-meta.xml
<CustomField>
    <fullName>Poly_Object__c</fullName>
    <label>Poly Object</label>
    <referenceTo>PBS_AAAP_PolyObject__c</referenceTo>
    <relationshipLabel>Poly Paths</relationshipLabel>
    <relationshipName>Poly_Paths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>